--- a/Basic JavaScript Projects/Project1_expressions_alert/index.html
+++ b/Basic JavaScript Projects/Project1_expressions_alert/index.html
@@ -8,6 +8,8 @@
     <script src="JS/main.js"></script>
 </head>
 <body>
+    <br><br>
+    <button onclick="My_First_Function()" id="Button_Text">Click On Me!!!!!!</button>
            
 </body>
 </html>
