--- a/React_Projects/React_3.html
+++ b/React_Projects/React_3.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Step 382</title>
+
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
+
+    <div id="JSX"></div>
+
+    <script type="text/babel">
+        class Greeting extends React.Component {
+            render() {
+                return <h1>Hi there, hello! This was super easy, barely an inconvenience.</h1>
+            }
+        }
+
+        ReactDOM.render(<Greeting />, document.getElementById('JSX'))
+    </script>
     
 </body>
 </html>
