--- a/ToDo_App/index.html
+++ b/ToDo_App/index.html
@@ -15,5 +15,6 @@
 
     <script src="JS/todo.js"></script>
     
+    <footer>Assignment submitted by Myra Reeves in June 2024</footer>
 </body>
 </html>
