--- a/ToDo_App/index.html
+++ b/ToDo_App/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/todo.css">
 </head>
 <body>
+    <h1>To Do List:</h1>
 
     <input id="task"><button id="add">Add Item</button>
     <hr>
